[package]
name = "scraprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["time"], default-features = false }
lazy_static = "1.4.0"
serde = "1.0.152"
thirtyfour = "0.31.0"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
