[package]
name = "scraprs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.23", features = ["time"], default-features = false }
once_cell = "1.17.1"
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
scraper = "0.15.0"
serde = "1.0.152"
thirtyfour = "0.31.0"
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
